fix nav menu spacing and layout for mobile

--- a/sass/_archives-page.scss
+++ b/sass/_archives-page.scss
@@ -11,15 +11,23 @@
     font-size: 1rem;
     font-weight: 300;
     text-align: left;
+    @include desktop {
+      font-size: 1.25rem;
+    }
   }
+
   h2 {
     font-size: 2rem;
   }
   .post-archives,
-  .tag-archives,
   .category-archives {
-    font-size: 1rem;
-
+    // font-size: 1rem;
+    @include desktop {
+      font-size: 1.25rem;
+    }
+  }
+  .tag-archives {
+    // font-size: 1rem;
     @include desktop {
       font-size: 1.25rem;
     }
