--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -22,39 +22,58 @@ a {
 /* Menus */
 
 .site-info {
+  display: flex;
   width: 100%;
   height: 100px;
   p {
     line-height: 1;
+    font-weight: 300;
   }
   @include tablet {
-    display: flex;
     flex-wrap: wrap;
   }
 }
 .footer-navigation {
   display: inline-flex;
 }
-
+.site-footer-container {
+  padding-left: 0;
+}
 .menu-item {
   border-right: 1px solid #fff;
   line-height: 1;
   padding: 0 1rem;
+  font-weight: 300;
 }
 .nav-red {
   display: flex;
   margin-top: 0;
+  padding-left: 0;
 }
+
 .main-navigation {
   clear: both;
-  display: inline-flex;
-  justify-content: flex-end;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   width: 100%;
+  ul {
+    padding-left: 0;
+  }
+  .menu-item-217 {
+    padding-left: 0;
+    @include desktop {
+      padding: 0 1rem;
+    }
+  }
   @include desktop {
     justify-content: flex-end;
+    display: inline-flex;
   }
   .nav-spacer {
-    padding-left: 15px;
+    @include tablet {
+      padding-left: 15px;
+    }
   }
   .nav-spacer2 {
     padding-left: 5px;
