--- a/sass/_page-templates.scss
+++ b/sass/_page-templates.scss
@@ -103,16 +103,16 @@ body {
   .entry-meta {
     text-align: left;
     padding-left: 0;
-  }
-  @include desktop {
-    padding-left: 0;
-    p {
-      padding-left: 4rem;
+    @include desktop {
+      padding-left: 10rem;
     }
+  }
 
-    .entry-meta {
-      @include desktop {
-        padding-left: 10rem;
+  .entry-content {
+    @include desktop {
+      padding-left: 0;
+      p {
+        padding-left: 4rem;
       }
     }
 
