--- a/style.css
+++ b/style.css
@@ -449,15 +449,16 @@ a {
 
 /* Menus */
 .site-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 100%;
   height: 100px; }
   .site-info p {
-    line-height: 1; }
+    line-height: 1;
+    font-weight: 300; }
   @media screen and (min-width: 620px) {
     .site-info {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; } }
 
@@ -466,33 +467,51 @@ a {
   display: -ms-inline-flexbox;
   display: inline-flex; }
 
+.site-footer-container {
+  padding-left: 0; }
+
 .menu-item {
   border-right: 1px solid #fff;
   line-height: 1;
-  padding: 0 1rem; }
+  padding: 0 1rem;
+  font-weight: 300; }
 
 .nav-red {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 0; }
+  margin-top: 0;
+  padding-left: 0; }
 
 .main-navigation {
   clear: both;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   width: 100%; }
+  .main-navigation ul {
+    padding-left: 0; }
+  .main-navigation .menu-item-217 {
+    padding-left: 0; }
+    @media screen and (min-width: 1080px) {
+      .main-navigation .menu-item-217 {
+        padding: 0 1rem; } }
   @media screen and (min-width: 1080px) {
     .main-navigation {
       -webkit-box-pack: end;
           -ms-flex-pack: end;
-              justify-content: flex-end; } }
-  .main-navigation .nav-spacer {
-    padding-left: 15px; }
+              justify-content: flex-end;
+      display: -webkit-inline-box;
+      display: -ms-inline-flexbox;
+      display: inline-flex; } }
+  @media screen and (min-width: 620px) {
+    .main-navigation .nav-spacer {
+      padding-left: 15px; } }
   .main-navigation .nav-spacer2 {
     padding-left: 5px; }
   .main-navigation ul {
@@ -748,19 +767,18 @@ body {
 .blog .entry-meta {
   text-align: left;
   padding-left: 0; }
-
-@media screen and (min-width: 1080px) {
-  .blog {
-    padding-left: 0; }
-    .blog p {
-      padding-left: 4rem; } }
-  @media screen and (min-width: 1080px) and (min-width: 1080px) {
+  @media screen and (min-width: 1080px) {
     .blog .entry-meta {
       padding-left: 10rem; } }
 
 @media screen and (min-width: 1080px) {
-    .blog .source {
-      font-style: italic; } }
+  .blog .entry-content {
+    padding-left: 0; }
+    .blog .entry-content p {
+      padding-left: 4rem; } }
+
+.blog .entry-content .source {
+  font-style: italic; }
 
 #new-quote-button {
   color: #00cc00;
@@ -837,19 +855,21 @@ body {
   font-size: 1rem;
   font-weight: 300;
   text-align: left; }
+  @media screen and (min-width: 1080px) {
+    .page-id-207 .site-main {
+      font-size: 1.25rem; } }
 
 .page-id-207 h2 {
   font-size: 2rem; }
 
-.page-id-207 .post-archives,
-.page-id-207 .tag-archives,
-.page-id-207 .category-archives {
-  font-size: 1rem; }
-  @media screen and (min-width: 1080px) {
-    .page-id-207 .post-archives,
-    .page-id-207 .tag-archives,
-    .page-id-207 .category-archives {
-      font-size: 1.25rem; } }
+@media screen and (min-width: 1080px) {
+  .page-id-207 .post-archives,
+  .page-id-207 .category-archives {
+    font-size: 1.25rem; } }
+
+@media screen and (min-width: 1080px) {
+  .page-id-207 .tag-archives {
+    font-size: 1.25rem; } }
 
 .page-id-207 ul {
   display: -webkit-box;
